Fixed bug with mobile CSS inserting unnecessary spacing.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,13 @@
+p {
+    margin-bottom: 0px;
+    padding-bottom: 10px;
+}
+
+h2 {
+    margin-top: 0px;
+    padding-top: 20px;
+}
+
 .open_restaurant {
     background: #a4c306;
     text-align: center;
